[gd_scene load_steps=5 format=3 uid="uid://bcwvek6vlgxli"]

[ext_resource type="Texture2D" uid="uid://cikq0f5468hgc" path="res://Assets/card_d13.png" id="1_kikvd"]
[ext_resource type="Script" uid="uid://c3j54b0bypqqm" path="res://Scripts/Card.gd" id="1_rjlel"]
[ext_resource type="Texture2D" uid="uid://bognghmfqb3rk" path="res://Assets/card_backside.png" id="3_brehn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(219, 324)

[node name="Card" type="Node2D"]
script = ExtResource("1_rjlel")

[node name="CardImage" type="Sprite2D" parent="."]
scale = Vector2(0.11126797, 0.11126797)
texture = ExtResource("1_kikvd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_rjlel")

[node name="CardImageBack" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.11126797, 0.11126797)
texture = ExtResource("3_brehn")

[node name="Take" type="Button" parent="."]
visible = false
offset_left = -80.0
offset_top = 128.0
offset_right = -35.0
offset_bottom = 159.0
text = "Take"

[node name="Give" type="Button" parent="."]
visible = false
offset_left = -80.0
offset_top = -160.0
offset_right = -40.0
offset_bottom = -129.0
text = "give"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Take" to="." method="_on_take_pressed"]
[connection signal="pressed" from="Give" to="." method="_on_give_pressed"]
